# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//gn/core/config/android/env.gni")
import("//gn/core/config/android/rules.gni")

# GYP: //gn/android/pylib/remote/device/dummy/dummy.gyp:remote_device_dummy_apk
android_apk("remote_device_dummy_apk") {
  android_manifest = "//gn/android/AndroidManifest.xml"
  java_files = [ "src/org/chromium/dummy/Dummy.java" ]
  apk_name = "remote_device_dummy"
  testonly = true
}
